[package]
name = "rync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
async_once = "0.2.6"
bincode = "1.3.3"
directories = "5.0.1"
futures = "0.3.30"
lazy_static = "1.4.0"
local-ip-address = "0.5.6"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rcgen = "0.12.0"
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.194", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
walkdir = "2.4.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
